--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
-  "unpkg": "dist/umd/fura.min.js",
+  "unpkg": "dist/umd/parser.min.js",
   "types": "dist/cjs/index.d.ts",
   "files": [
     "dist"
@@ -23,5 +23,8 @@
   },
   "bugs": {
     "url": "https://github.com/MasonChow/fura/issues"
+  },
+  "dependencies": {
+    "@swc/core": "^1.3.5"
   }
 }
