--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "access": "public"
   },
   "devDependencies": {
+    "@swc/core": "^1.3.5",
+    "@swc/jest": "^0.2.23",
     "@types/jest": "^29.1.1",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
