--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
-  "unpkg": "dist/umd/fura.min.js",
+  "unpkg": "dist/umd/core.min.js",
   "types": "dist/cjs/index.d.ts",
   "files": [
     "dist"
@@ -23,5 +23,11 @@
   },
   "bugs": {
     "url": "https://github.com/MasonChow/fura/issues"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.186"
   }
 }
