--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -25,6 +25,9 @@
     "url": "https://github.com/MasonChow/fura/issues"
   },
   "dependencies": {
+    "@babel/parser": "^7.19.3",
+    "@babel/traverse": "^7.19.3",
+    "@babel/types": "^7.19.3",
     "@swc/core": "^1.3.5"
   }
 }
