--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -25,7 +25,10 @@
     "url": "https://github.com/MasonChow/fura/issues"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "next": "^13.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.186"
