--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "name": "fura",
   "version": "0.0.2",
   "description": "文件使用关系分析(File usage relationship analysis)",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MasonChow/fura.git"
+  },
   "scripts": {
-    "build:all": "npm run build --workspaces",
-    "dev:parser": "npm run dev --workspace=packages/parser",
+    "dev": "father dev",
+    "build": "father build",
+    "build:deps": "father prebundle",
     "test": "jest",
     "eslint": "npx eslint packages/**/src/* --ext .js,.ts --fix"
   },
@@ -14,17 +19,25 @@
     "zhoushunming <masonchow@qq.com>"
   ],
   "license": "MIT",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "unpkg": "dist/umd/core.min.js",
+  "types": "dist/cjs/index.d.ts",
   "files": [
-    "dist",
-    "compiled"
+    "dist"
   ],
   "publishConfig": {
     "access": "public"
   },
+  "bugs": {
+    "url": "https://github.com/MasonChow/fura/issues"
+  },
   "devDependencies": {
+    "@babel/types": "^7.20.2",
     "@swc/core": "^1.3.5",
     "@swc/jest": "^0.2.23",
     "@types/jest": "^29.1.1",
+    "@types/lodash": "^4.14.189",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
     "eslint": "^8.24.0",
@@ -39,7 +52,9 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
-  "workspaces": [
-    "packages/*"
-  ]
+  "dependencies": {
+    "@babel/parser": "^7.20.3",
+    "@babel/traverse": "^7.20.1",
+    "lodash": "^4.17.21"
+  }
 }
