--- a/package.json
+++ b/package.json
@@ -1,31 +1,21 @@
 {
   "private": true,
   "name": "fura",
-  "version": "0.0.2",
+  "version": "0.0.1",
   "description": "文件使用关系分析(File usage relationship analysis)",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MasonChow/fura.git"
   },
   "scripts": {
-    "dev": "father dev",
-    "build": "father build",
-    "build:deps": "father prebundle",
     "test": "jest",
-    "eslint": "npx eslint packages/**/src/* --ext .js,.ts --fix"
+    "eslint": "eslint packages/**/src/* --ext .js,.ts --fix"
   },
   "keywords": [],
   "authors": [
     "zhoushunming <masonchow@qq.com>"
   ],
   "license": "MIT",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "unpkg": "dist/umd/core.min.js",
-  "types": "dist/cjs/index.d.ts",
-  "files": [
-    "dist"
-  ],
   "publishConfig": {
     "access": "public"
   },
@@ -33,11 +23,11 @@
     "url": "https://github.com/MasonChow/fura/issues"
   },
   "devDependencies": {
-    "@babel/types": "^7.20.2",
-    "@swc/core": "^1.3.5",
+    "@swc/core": "^1.3.21",
     "@swc/jest": "^0.2.23",
-    "@types/jest": "^29.1.1",
+    "@types/jest": "^29.2.3",
     "@types/lodash": "^4.14.189",
+    "@types/node": "^18.11.10",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
     "eslint": "^8.24.0",
@@ -45,16 +35,14 @@
     "eslint-config-next": "^13.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "father": "^4.0.6",
     "jest": "^29.1.2",
     "prettier": "^2.7.1",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
-  "dependencies": {
-    "@babel/parser": "^7.20.3",
-    "@babel/traverse": "^7.20.1",
-    "lodash": "^4.17.21"
-  }
+  "workspaces": [
+    "packages/*"
+  ],
+  "packageManager": "pnpm@7.17.1"
 }
