feat: 增加使用db形式缓存数据

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "publishConfig": {
     "access": "public"
   },
+  "preinstall": "npx only-allow pnpm",
   "bugs": {
     "url": "https://github.com/MasonChow/fura/issues"
   },
