--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -12,7 +12,9 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "module": "esnext",
+    "target": "ESNext",
   },
   "include": [
     "next-env.d.ts",
