--- a/package.json
+++ b/package.json
@@ -8,26 +8,38 @@
     "url": "git+https://github.com/MasonChow/fura.git"
   },
   "scripts": {
-    "test": "jest",
-    "eslint": "eslint packages/**/src/* --ext .js,.ts --fix"
+    "dev": "father dev",
+    "build": "father build",
+    "build:deps": "father prebundle"
   },
   "keywords": [],
   "authors": [
     "zhoushunming <masonchow@qq.com>"
   ],
   "license": "MIT",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "unpkg": "dist/umd/core.min.js",
+  "types": "dist/cjs/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "publishConfig": {
     "access": "public"
   },
-  "preinstall": "npx only-allow pnpm",
   "bugs": {
     "url": "https://github.com/MasonChow/fura/issues"
   },
   "devDependencies": {
+    "@babel/types": "^7.20.2",
+    "@babel/parser": "^7.20.3",
+    "@babel/traverse": "^7.20.5",
+    "@types/better-sqlite3": "^7.6.2",
+    "@types/babel__traverse": "^7.18.3",
+    "@types/lodash": "^4.14.189",
     "@swc/core": "^1.3.21",
     "@swc/jest": "^0.2.23",
     "@types/jest": "^29.2.3",
-    "@types/lodash": "^4.14.189",
     "@types/node": "^18.11.10",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
@@ -36,14 +48,17 @@
     "eslint-config-next": "^13.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "father": "^4.0.6",
     "jest": "^29.1.2",
     "prettier": "^2.7.1",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
-  "workspaces": [
-    "packages/*"
-  ],
+  "dependencies": {
+    "better-sqlite3": "^8.0.1",
+    "knex": "^2.3.0",
+    "lodash": "^4.17.21"
+  },
   "packageManager": "pnpm@7.17.1"
 }
