--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   },
   "scripts": {
     "dev": "father dev",
-    "build": "father build",
-    "build:deps": "father prebundle"
+    "build": "swc ./src -d ./dist && tsc --emitDeclarationOnly --outDir dist"
   },
   "keywords": [],
   "authors": [
@@ -31,15 +30,16 @@
     "url": "https://github.com/MasonChow/fura/issues"
   },
   "devDependencies": {
-    "@babel/types": "^7.20.2",
     "@babel/parser": "^7.20.3",
     "@babel/traverse": "^7.20.5",
-    "@types/better-sqlite3": "^7.6.2",
-    "@types/babel__traverse": "^7.18.3",
-    "@types/lodash": "^4.14.189",
-    "@swc/core": "^1.3.21",
+    "@babel/types": "^7.20.2",
+    "@swc/cli": "^0.1.59",
+    "@swc/core": "^1.3.27",
     "@swc/jest": "^0.2.23",
+    "@types/babel__traverse": "^7.18.3",
+    "@types/better-sqlite3": "^7.6.2",
     "@types/jest": "^29.2.3",
+    "@types/lodash": "^4.14.189",
     "@types/node": "^18.11.10",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
@@ -48,7 +48,6 @@
     "eslint-config-next": "^13.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "father": "^4.0.6",
     "jest": "^29.1.2",
     "prettier": "^2.7.1",
     "ts-jest": "^29.0.3",
