--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,8 @@
     "allowJs": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "isolatedModules": true,
     "incremental": true,
-    "module": "esnext",
+    "module": "CommonJS",
     "target": "ESNext",
     "moduleResolution": "node",
     "declarationDir": "./dist",
