--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   "dependencies": {
     "better-sqlite3": "^8.0.1",
     "cac": "^6.7.14",
+    "canvas": "^2.11.0",
     "echarts": "^5.4.1",
     "knex": "^2.3.0",
     "lodash": "^4.17.21"
