feat: 保留多入口配置可能

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,9 +15,7 @@
       "args": [
         "${workspaceFolder}/src/bin/index.ts",
         "run",
-        "${workspaceFolder}",
-        "-c",
-        "${workspaceFolder}/debug/config.json"
+        "${workspaceFolder}"
       ]
     }
   ]
