--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/jest": "^29.2.3",
     "@types/lodash": "^4.14.189",
     "@types/node": "^18.11.18",
+    "@types/rc": "^1.2.1",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
     "eslint": "^8.24.0",
@@ -60,8 +61,10 @@
     "cac": "^6.7.14",
     "canvas": "^2.11.0",
     "echarts": "^5.4.1",
+    "is-git-clean": "^1.1.0",
     "knex": "^2.3.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "rc": "^1.2.8"
   },
   "packageManager": "pnpm@7.17.1"
 }
