--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@swc/jest": "^0.2.23",
     "@types/babel__traverse": "^7.18.3",
     "@types/better-sqlite3": "^7.6.2",
+    "@types/debug": "^4.1.7",
     "@types/jest": "^29.2.3",
     "@types/lodash": "^4.14.189",
     "@types/node": "^18.11.18",
@@ -60,6 +61,7 @@
     "better-sqlite3": "^8.0.1",
     "cac": "^6.7.14",
     "canvas": "^2.11.0",
+    "debug": "^4.3.4",
     "echarts": "^5.4.1",
     "is-git-clean": "^1.1.0",
     "knex": "^2.3.0",
