feat: 调整使用tsc编译

--- a/.swcrc
+++ b/.swcrc
@@ -3,7 +3,8 @@
   "jsc": { // 编译规则 
     "target": "es2022", // 输出js的规范 
     "parser": {
-      "syntax": "typescript"
+      "syntax": "typescript",
+      "dynamicImport": true
     }
   }
 }
