--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "url": "git+https://github.com/MasonChow/fura.git"
   },
   "scripts": {
-    "build": "swc ./src -d ./dist && tsc --emitDeclarationOnly --outDir dist"
+    "build:tsc": "rm -rf ./dist && tsc",
+    "build:swc": "rm -rf ./dist && swc ./src -d ./dist && tsc --emitDeclarationOnly --outDir dist"
   },
   "keywords": [],
   "authors": [
@@ -22,7 +23,7 @@
     "dist"
   ],
   "bin": {
-    "fura": "dist/bin/index.js"
+    "fura": "dist/bin/cli.js"
   },
   "publishConfig": {
     "access": "public"
@@ -58,14 +59,18 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@clack/prompts": "^0.2.0",
     "better-sqlite3": "^8.0.1",
     "cac": "^6.7.14",
     "canvas": "^2.11.0",
     "debug": "^4.3.4",
+    "easy-table": "^1.2.0",
     "echarts": "^5.4.1",
+    "ejs": "^3.1.8",
     "is-git-clean": "^1.1.0",
     "knex": "^2.3.0",
     "lodash": "^4.17.21",
+    "ora": "^6.1.2",
     "rc": "^1.2.8"
   },
   "packageManager": "pnpm@7.17.1"
