--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,13 +8,15 @@
     "skipLibCheck": true,
     "allowJs": true,
     "forceConsistentCasingInFileNames": true,
+    "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "incremental": true,
     "module": "CommonJS",
-    "target": "ESNext",
+    "target": "ES2022",
     "moduleResolution": "node",
     "declarationDir": "./dist",
-    "baseUrl": "./src"
+    "baseUrl": "./src",
+    "outDir": "./dist"
   },
   "include": [
     "src"
@@ -22,5 +24,5 @@
   "exclude": [
     "node_modules",
     "**/test",
-  ]
+  ],
 }
