--- a/.furarc
+++ b/.furarc
@@ -2,13 +2,11 @@
   "alias": {
     "@": "./src"
   },
-  "deadCode": {
-    "entry": [
-      "./src/index.ts",
-      "./src/bin/cli.ts"
-    ],
-    "include": [
-      "./src"
-    ]
-  }
+  "entry": [
+    "./src/index.ts",
+    "./src/bin/index.ts"
+  ],
+  "include": [
+    "./src"
+  ]
 }
