--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,6 +18,20 @@
     {
       "type": "node",
       "request": "launch",
+      "name": "comment-doc",
+      "envFile": "${workspaceFolder}/.env",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "program": "${workspaceFolder}/node_modules/ts-node/dist/bin.js",
+      "args": [
+        "${workspaceFolder}/src/bin/index.ts",
+        "comment-doc",
+      ]
+    },
+    {
+      "type": "node",
+      "request": "launch",
       "name": "fura help",
       "envFile": "${workspaceFolder}/.env",
       "skipFiles": [
