--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   },
   "dependencies": {
     "@clack/prompts": "^0.2.0",
+    "axios": "^1.3.3",
     "better-sqlite3": "^8.0.1",
     "cac": "^6.7.14",
     "canvas": "^2.11.0",
