--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "cSpell.words": [
-    "jscodeshift"
+    "jscodeshift",
+    "Kroki"
   ],
   "typescript.tsdk": "node_modules/typescript/lib"
 }
