--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/lodash": "^4.14.189",
     "@types/node": "^18.11.18",
     "@types/rc": "^1.2.1",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
     "eslint": "^8.24.0",
@@ -71,7 +72,8 @@
     "knex": "^2.3.0",
     "lodash": "^4.17.21",
     "ora": "^6.1.2",
-    "rc": "^1.2.8"
+    "rc": "^1.2.8",
+    "uuid": "^9.0.0"
   },
   "packageManager": "pnpm@7.17.1"
 }
