--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/jest": "^29.2.3",
     "@types/lodash": "^4.14.189",
     "@types/node": "^18.11.18",
+    "@types/pako": "^2.0.0",
     "@types/rc": "^1.2.1",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
@@ -54,6 +55,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.1.2",
+    "mermaid-cli": "link:@types/@mermaid-js/mermaid-cli",
     "prettier": "^2.7.1",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
@@ -61,6 +63,7 @@
   },
   "dependencies": {
     "@clack/prompts": "^0.2.0",
+    "@mermaid-js/mermaid-cli": "^9.4.0",
     "axios": "^1.3.3",
     "better-sqlite3": "^8.0.1",
     "cac": "^6.7.14",
@@ -72,6 +75,7 @@
     "knex": "^2.3.0",
     "lodash": "^4.17.21",
     "ora": "^6.1.2",
+    "pako": "^2.1.0",
     "rc": "^1.2.8",
     "uuid": "^9.0.0"
   },
