--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,10 @@
     "plugin:prettier/recommended",
     "prettier"
   ],
+  "env": {
+    "es2022": true,
+    "node": true
+  },
   "parser": "@typescript-eslint/parser",
   "plugins": [
     "@typescript-eslint"
@@ -23,7 +27,8 @@
   "parserOptions": {
     "project": [
       "tsconfig.json"
-    ]
+    ],
+    "sourceType": "module"
   },
   "rules": {
     // 禁止使用 var
