--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,16 +9,15 @@
       "skipFiles": [
         "<node_internals>/**"
       ],
-      "program": "${workspaceFolder}/node_modules/ts-node/dist/bin.js",
       "args": [
-        "${workspaceFolder}/src/bin/index.ts",
+        "${workspaceFolder}/dist/bin/index.js",
         "unused",
       ]
     },
     {
       "type": "node",
       "request": "launch",
-      "name": "comment-doc",
+      "name": "schema",
       "envFile": "${workspaceFolder}/.env",
       "skipFiles": [
         "<node_internals>/**"
@@ -26,7 +25,7 @@
       "program": "${workspaceFolder}/node_modules/ts-node/dist/bin.js",
       "args": [
         "${workspaceFolder}/src/bin/index.ts",
-        "comment-doc",
+        "schema",
       ]
     },
     {
