--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
+    "browserslist": "^4.21.5",
+    "chokidar": "^3.5.3",
     "eslint": "^8.24.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-next": "^13.0.0",
@@ -74,7 +76,7 @@
     "is-git-clean": "^1.1.0",
     "knex": "^2.3.0",
     "lodash": "^4.17.21",
-    "ora": "^6.1.2",
+    "ora": "^5.4.1",
     "pako": "^2.1.0",
     "rc": "^1.2.8",
     "uuid": "^9.0.0"
