--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/parser": "^7.20.3",
     "@babel/traverse": "^7.20.5",
     "@babel/types": "^7.20.2",
+    "@clack/prompts": "^0.2.0",
     "@swc/cli": "^0.1.59",
     "@swc/core": "^1.3.27",
     "@swc/jest": "^0.2.23",
@@ -63,7 +64,6 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "@clack/prompts": "^0.2.0",
     "@mermaid-js/mermaid-cli": "^9.4.0",
     "axios": "^1.3.3",
     "better-sqlite3": "^8.0.1",
@@ -72,6 +72,7 @@
     "easy-table": "^1.2.0",
     "echarts": "^5.4.1",
     "ejs": "^3.1.8",
+    "execa": "5.1.1",
     "is-git-clean": "^1.1.0",
     "knex": "^2.3.0",
     "lodash": "^4.17.21",
