--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fura",
-  "version": "0.0.2-4",
+  "version": "0.0.2",
   "description": "文件使用关系分析(File usage relationship analysis)",
   "repository": {
     "type": "git",
