--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -45,6 +45,22 @@
     {
       "type": "node",
       "request": "launch",
+      "name": "pkg",
+      "envFile": "${workspaceFolder}/.env",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "program": "${workspaceFolder}/node_modules/ts-node/dist/bin.js",
+      "args": [
+        "${workspaceFolder}/src/bin/index.ts",
+        "pkg",
+        "@babel/parser",
+        "axios"
+      ]
+    },
+    {
+      "type": "node",
+      "request": "launch",
       "name": "fura help",
       "envFile": "${workspaceFolder}/.env",
       "skipFiles": [
