--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -55,7 +55,8 @@
         "${workspaceFolder}/src/bin/index.ts",
         "pkg",
         "@babel/parser",
-        "axios"
+        "axios",
+        "better-sqlite3"
       ]
     },
     {
