--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -55,8 +55,7 @@
         "${workspaceFolder}/src/bin/index.ts",
         "pkg",
         "@babel/parser",
-        "axios",
-        "better-sqlite3"
+        "lodash",
       ]
     },
     {
