--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fura",
-  "version": "0.0.4",
+  "version": "0.1.0",
   "description": "文件使用关系分析(File usage relationship analysis)",
   "repository": {
     "type": "git",
@@ -10,8 +10,8 @@
     "build:tsc": "rm -rf ./dist && tsc",
     "build:swc": "rm -rf ./dist && swc ./src -d ./dist && tsc --emitDeclarationOnly --outDir dist",
     "prerelease": "pnpm build:swc && npm version prerelease && npm publish --tag beta",
-    "release:release": "pnpm build:swc && npm version minor && npm publish",
-    "release:fix": "pnpm build:swc && npm version patch && npm publish"
+    "deploy:release": "pnpm build:swc && npm version minor && npm publish",
+    "deploy:fix": "pnpm build:swc && npm version patch && npm publish"
   },
   "keywords": [],
   "authors": [
