--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,8 +9,9 @@
       "skipFiles": [
         "<node_internals>/**"
       ],
+      "program": "${workspaceFolder}/node_modules/ts-node/dist/bin.js",
       "args": [
-        "${workspaceFolder}/dist/bin/index.ts",
+        "${workspaceFolder}/src/bin/index.ts",
         "unused",
       ]
     },
