--- a/.eslintrc
+++ b/.eslintrc
@@ -56,6 +56,7 @@
     "no-param-reassign": "warn",
     "no-plusplus": "off",
     "no-loop-func": "off",
+    "no-shadow": "off",
     "no-console": [
       "warn",
       {
