--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -40,7 +40,8 @@
       "program": "${workspaceFolder}/node_modules/ts-node/dist/bin.js",
       "args": [
         "${workspaceFolder}/src/bin/index.ts",
-        "diff-influence"
+        "diff-influence",
+        "main"
       ]
     },
     {
