--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,1 @@
-/node_modules
-/dist
-.DS_Store
-/dev
-/coverage
-/debug
-/.fura
-/build
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
-.env
+/target
