--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-swc = "0.261.43"
+# swc = "0.261.43"
+rusqlite = { version = "0.29.0", features = ["bundled"] }
+lazy_static = "1.4.0"
