--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
   "rust-analyzer.linkedProjects": [
     "./Cargo.toml",
     "./Cargo.toml",
+    "./Cargo.toml",
+    "./Cargo.toml",
+    "./Cargo.toml",
     "./Cargo.toml"
   ],
   "rust-analyzer.showUnlinkedFileNotification": true,
