--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 # swc = "0.261.43"
 rusqlite = { version = "0.29.0", features = ["bundled"] }
 lazy_static = "1.4.0"
+futures = "0.3"
