--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2021"
 rusqlite = { version = "0.29.0", features = ["bundled"] }
 lazy_static = "1.4.0"
 futures = "0.3"
+serde_json = "1.0"
