--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,9 @@
     "./Cargo.toml",
     "./Cargo.toml",
     "./Cargo.toml",
+    "./Cargo.toml",
+    "./Cargo.toml",
+    "./Cargo.toml",
     "./Cargo.toml"
   ],
   "rust-analyzer.showUnlinkedFileNotification": true,
