--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ rusqlite = { version = "0.29.0", features = ["bundled"] }
 lazy_static = "1.4.0"
 futures = "0.3"
 serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
