--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# swc = "0.261.43"
 rusqlite = { version = "0.29.0", features = ["bundled"] }
 lazy_static = "1.4.0"
 futures = "0.3"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
+deno_ast = "0.27.2"
