--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 deno_ast = "0.27.2"
 url = "2.4.0"
+
+[dev-dependencies]
+pretty_assertions = "1.4.0"
