--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ serde = { version = "1.0", features = ["derive"] }
 deno_ast = "0.27.2"
 url = "2.4.0"
 tracing = "0.1.37"
+env_logger = "0.10.0"
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
